nodeapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
  namespace: staging
  labels:
    app: nodeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeapp
        image: registry.docker.hub.com/nodeapp
        ports:
        - containerPort: 9000
